anexo fotos e index e style
foi adicionado as fotos, criado html e css com bootstrap

--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,16 @@
-.artigos {
-    background-color: rgb(72, 83, 83);
-    height: 90vh;
-}
+
 
 .rodape {
     background-color: black;
     height: 10vh;
+}
+
+section div {
+    padding: 3%;
+    
+}
+
+
+.projetos{
+    padding-top: 3%;
 }
