--- a/styles.css
+++ b/styles.css
@@ -22,20 +22,40 @@ section div {
 
 .meunome {
     padding-left: 6%;
-    color: white;
+    color: black;
+    font-size: xx-large;
+  
     
 }
 .sobremim {
     padding-left: 6%;
-    background-color: black;
+    color: white;
     
+}
+
+.pSobremim {
+    color: white;
 }
 
 .containersobreEimage {
     display: flex;
-    background-color: black;
+    background-color: #242323;
 }
 
 .containerIMAGEM {
     margin-top: 2%;
+}
+
+.social {
+    background-color: black;
+}
+
+footer {
+    background-color: #000;
+    padding-top: 100px;
+    padding-bottom: 120px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
